--- a/src/main/resources/i18n/errormessage_en_US.properties
+++ b/src/main/resources/i18n/errormessage_en_US.properties
@@ -3,5 +3,5 @@ com.authority.1001=userAccount or password error.
 com.authority.1002=please input username.
 com.authority.1003=please input password.
 com.authority.1004=token cache failed.
-com.authority.1005=wrong password.
+com.authority.1005=System error.
 
