--- a/src/main/resources/i18n/errormessage_zh_CN.properties
+++ b/src/main/resources/i18n/errormessage_zh_CN.properties
@@ -3,4 +3,4 @@ com.authority.1001=用户名或密码错误
 com.authority.1002=请输入用户名
 com.authority.1003=请输入密码
 com.authority.1004=令牌保存失败
-com.authority.1005=密码错误
+com.authority.1005=系统异常
